--- a/views/director-page.ejs
+++ b/views/director-page.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Director's Message (Indian Institute of Information Technology Bhagalpur)"
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Director's Message (Indian Institute of Information Technology Bhagalpur)"
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -75,10 +75,7 @@
     <meta name="og:country-name" content="INDIA" />
     <link rel="stylesheet" href="/css\main.css" />
     <link rel="stylesheet" href="/css\page-css\director-page.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
 
     <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
