--- a/views/for-recruiters.ejs
+++ b/views/for-recruiters.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Recruiters Section. Recruiters can able to find the details required for the recruitment process."
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Recruiters Section. Recruiters can able to find the details required for the recruitment process."
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -74,25 +74,14 @@
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
     <title>Info | Training & Placement Cell</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
 
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css\main.css" />
     <link rel="stylesheet" href="/css\page-css\for-recruiters.css" />
 
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script
-      defer
-      type="text/javascript"
-      src="/js/for-recriters.js"
-    ></script>
+    <script defer type="text/javascript" src="/js/for-recriters.js"></script>
     <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
@@ -111,10 +100,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/placement-banner.jpg"
-                  alt="placement-1"
-                />
+                <img src="/assets/placement-banner.jpg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -192,10 +178,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/facilities-banner.jpeg"
-                  alt="placement-1"
-                />
+                <img src="/assets/facilities-banner.jpeg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -221,10 +204,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/demographics-banner.jpg"
-                  alt="placement-1"
-                />
+                <img src="/assets/demographics-banner.jpg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -293,10 +273,7 @@
               </div>
               <div class="contact-card">
                 <div class="card-img">
-                  <img
-                    src="/assets\Sangeeta_sharma.jpg"
-                    alt="card image"
-                  />
+                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Sangeeta Sharma</h3>
@@ -338,10 +315,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Shiva Patel.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Shiva Patel.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Shiva Patel</h3>
@@ -363,10 +337,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Agrawal.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Agrawal</h3>
@@ -426,10 +397,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Isha Chaudhary.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Isha Chaudhary.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Isha Chaudhary</h3>
@@ -476,10 +444,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Tarun Kannaojia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Tarun Kannoujia</h3>
@@ -523,10 +488,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Hanselia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Hanselia</h3>
@@ -629,10 +591,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/placement-banner.jpg"
-                  alt="placement-1"
-                />
+                <img src="/assets/placement-banner.jpg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -710,10 +669,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/facilities-banner.jpeg"
-                  alt="placement-1"
-                />
+                <img src="/assets/facilities-banner.jpeg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -739,10 +695,7 @@
           <div class="content-fr">
             <div class="card">
               <div class="card-img-fr">
-                <img
-                  src="/assets/demographics-banner.jpg"
-                  alt="placement-1"
-                />
+                <img src="/assets/demographics-banner.jpg" alt="placement-1" />
               </div>
               <div class="card-details-fr">
                 <ul>
@@ -813,10 +766,7 @@
               </div>
               <div class="contact-card">
                 <div class="card-img">
-                  <img
-                    src="/assets\Sangeeta_sharma.jpg"
-                    alt="card image"
-                  />
+                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Sangeeta Sharma</h3>
@@ -858,10 +808,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Shiva Patel.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Shiva Patel.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Shiva Patel</h3>
@@ -883,10 +830,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Agrawal.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Agrawal</h3>
@@ -908,10 +852,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Isha Chaudhary.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Isha Chaudhary.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Isha Chaudhary</h3>
@@ -958,10 +899,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Tarun Kannaojia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Tarun Kannoujia</h3>
@@ -1005,10 +943,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Hanselia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Hanselia</h3>
@@ -1068,10 +1003,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit sharma.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit sharma.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Sharma</h3>
@@ -1090,10 +1022,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit pandey.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit pandey.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Pandey</h3>
@@ -1157,10 +1086,7 @@
           <div class="side-div-mid">
             <h2>Register for recruitment from IIIT Bhagalpur</h2>
             <div class="register-btn">
-              <a
-                href="/jaf"
-                >Register now</a
-              >
+              <a href="/jaf">Register now</a>
             </div>
           </div>
           <div class="side-div-down">
