--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,11 +33,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="IIITBH, TnP IIITBH, Training and Placement Cell IIITBH, Indian Institute of Information Technology, Bhagalpur"
+      content="IIITBH, TnP IIITBH, Training and Placement Cell IIITBH, Indian Institute of Information Technology, Bhagalpur, tnp iiitbh, iiitbh"
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="The training and placement cell is responsible for all the placement activities of all the departments in Indian Institute of Information Technology, Bhagalpur."
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -78,7 +78,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="The training and placement cell is responsible for all the placement activities of all the departments in Indian Institute of Information Technology, Bhagalpur."
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
