--- a/views/jaf.ejs
+++ b/views/jaf.ejs
@@ -1,9 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-88FK0NC77G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-88FK0NC77G");
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="IIITBH, TnP IIITBH, Training and Placement Cell IIITBH, Indian Institute of Information Technology, Bhagalpur"
+    />
+    <meta name="description" content="Job Application Form, for recruiters." />
+    <meta name="subject" content="Training and Placement Cell, IIITBH" />
+    <meta
+      name="copyright"
+      content="Indian Institute of Information Technology, Bhagalpur"
+    />
+    <meta name="language" content="ES" />
+    <meta name="robots" content="index,follow" />
+    <meta name="revised" content="Monday, August 15th, 2022, 9:40 pm" />
+    <meta name="Classification" content="Education" />
+    <meta name="author" content="TPO, IIITBH, tpo@iiitbh.ac.in" />
+    <meta name="designer" content="Prem Kumar & Prateek Chandra" />
+    <meta name="reply-to" content="tnp_fic@iiitbh.ac.in" />
+    <meta name="owner" content="TPO, IIITBH" />
+    <meta name="url" content="https://tnp.iiitbh.ac.in" />
+    <meta name="identifier-URL" content="https://tnp.iiitbh.ac.in" />
+    <meta name="directory" content="submission" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
+    <meta name="revisit-after" content="7 days" />
+    <meta http-equiv="Expires" content="-1" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta
+      name="og:title"
+      content="Training and Placement Cell, IIIT Bhagalpur"
+    />
+    <meta name="og:type" content="Education" />
+    <meta name="og:url" content="https://tnp.iiitbh.ac.in" />
+    <meta
+      name="og:image"
+      content="https://tnp.iiitbh.ac.in/assets/fevicon.svg"
+    />
+    <meta
+      name="og:site_name"
+      content="Training and Placement Cell, IIIT Bhagalpur"
+    />
+    <meta
+      name="og:description"
+      content="Job Application Form, for recruiters."
+    />
+
+    <meta name="og:email" content="tpo@iiitbh.ac.in" />
+    <meta name="og:locality" content="Sabour" />
+    <meta name="og:region" content="Bhagalpur" />
+    <meta name="og:postal-code" content="813210" />
+    <meta name="og:country-name" content="INDIA" />
     <title>Recruitment Portal | IIIT Bhagalpur</title>
 
     <link rel="stylesheet" href="/css\jaf.css" />
@@ -115,7 +181,7 @@
             </div>
           </div>
         </div> -->
-        <div class="job-content-2">
+        <div class="job-content-2" style="margin-top: 2%">
           <div class="form-container">
             <div class="heading">
               <h1>Registration Details</h1>
@@ -164,10 +230,10 @@
                   <div class="form-group">
                     <h3 for="category">Category:</h3>
                     <select id="category" name="category">
-                      <option value="mnc">MNC</option>
-                      <option value="psu">PSU</option>
-                      <option value="ngo">NGO</option>
-                      <option value="oth">Other</option>
+                      <option value="MNC">MNC</option>
+                      <option value="PSU">PSU</option>
+                      <option value="NGO">NGO</option>
+                      <option value="Other">Other</option>
                     </select>
                   </div>
                   <div class="form-group">
@@ -296,7 +362,9 @@
                     <select id="gnd" name="jobOffer">
                       <option value="Full Time">Full Time</option>
                       <option value="Internship">Internship</option>
-                      <option value="Full Time + Internship">Full Time + Internship</option>
+                      <option value="Full Time + Internship">
+                        Full Time + Internship
+                      </option>
                     </select>
                   </div>
                   <div class="form-group">
@@ -320,19 +388,39 @@
                         <label for="M23">M.Tech 2023</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" id="B24" name="eligibility" value="B24" />
+                        <input
+                          type="checkbox"
+                          id="B24"
+                          name="eligibility"
+                          value="B24"
+                        />
                         <label for="B24">B.Tech 2024</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" id="M24" name="eligibility" value="M24" />
+                        <input
+                          type="checkbox"
+                          id="M24"
+                          name="eligibility"
+                          value="M24"
+                        />
                         <label for="M24">M.Tech 2024</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" id="B25" name="eligibility" value="B25" />
+                        <input
+                          type="checkbox"
+                          id="B25"
+                          name="eligibility"
+                          value="B25"
+                        />
                         <label for="B25">B.Tech 2025</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" id="M25" name="eligibility" value="M25" />
+                        <input
+                          type="checkbox"
+                          id="M25"
+                          name="eligibility"
+                          value="M25"
+                        />
                         <label for="M25">M.Tech 2025</label>
                       </div>
                     </fieldset>
@@ -342,15 +430,21 @@
                     <fieldset id="nation">
                       <div class="checkbox">
                         <input type="checkbox" name="branches" value="CSE" />
-                        <label for="CSE">CSE (Computer Science & Engineering)</label>
+                        <label for="CSE"
+                          >CSE (Computer Science & Engineering)</label
+                        >
                       </div>
                       <div class="checkbox">
                         <input type="checkbox" name="branches" value="ECE" />
-                        <label for="ECE">ECE (Electronics & Communication Enginnering)</label>
+                        <label for="ECE"
+                          >ECE (Electronics & Communication Enginnering)</label
+                        >
                       </div>
                       <div class="checkbox">
                         <input type="checkbox" name="branches" value="MEA" />
-                        <label for="MEA">MEA (Mechatronics & Automation Engineering)</label>
+                        <label for="MEA"
+                          >MEA (Mechatronics & Automation Engineering)</label
+                        >
                       </div>
                       <!-- <div class="checkbox">
                         <input type="checkbox" name="programs" value="MAC" />
@@ -495,23 +589,43 @@
                     </select> -->
                     <fieldset id="nation">
                       <div class="checkbox">
-                        <input type="checkbox" name="programs" value="Shortlist form CVs" />
+                        <input
+                          type="checkbox"
+                          name="programs"
+                          value="Shortlist form CVs"
+                        />
                         <label for="CSE">Shortlist form CVs</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="programs" value="Online Test" />
+                        <input
+                          type="checkbox"
+                          name="programs"
+                          value="Online Test"
+                        />
                         <label for="ECE">Online Test</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="programs" value="Written Test" />
+                        <input
+                          type="checkbox"
+                          name="programs"
+                          value="Written Test"
+                        />
                         <label for="MEA">Written Test</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="programs" value="Technical Interview" />
+                        <input
+                          type="checkbox"
+                          name="programs"
+                          value="Technical Interview"
+                        />
                         <label for="MAC">Technical Interview</label>
                       </div>
                       <div class="checkbox">
-                        <input type="checkbox" name="programs" value="Personal Interview" />
+                        <input
+                          type="checkbox"
+                          name="programs"
+                          value="Personal Interview"
+                        />
                         <label for="MAC">Personal Interview</label>
                       </div>
                     </fieldset>
