--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Statistics related to placement of Indian Institute of Information Technology Bhagalpur"
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Statistics related to placement of Indian Institute of Information Technology Bhagalpur"
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -74,16 +74,9 @@
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
     <title>Stats | Training & Placement Cell</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
 
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css\main.css" />
     <link rel="stylesheet" href="/css\page-css\for-recruiters.css" />
 
@@ -158,10 +151,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Shiva Patel.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Shiva Patel.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Shiva Patel</h3>
@@ -183,10 +173,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Agrawal.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Agrawal</h3>
@@ -208,10 +195,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Isha Chaudhary.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Isha Chaudhary.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Isha Chaudhary</h3>
@@ -258,10 +242,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Tarun Kannaojia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Tarun Kannoujia</h3>
@@ -305,10 +286,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Hanselia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Hanselia</h3>
@@ -368,10 +346,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit sharma.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit sharma.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Sharma</h3>
@@ -390,10 +365,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit pandey.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit pandey.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Pandey</h3>
@@ -583,10 +555,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Shiva Patel.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Shiva Patel.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Shiva Patel</h3>
@@ -608,10 +577,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Agrawal.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Agrawal</h3>
@@ -633,10 +599,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Isha Chaudhary.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Isha Chaudhary.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Isha Chaudhary</h3>
@@ -683,10 +646,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Tarun Kannaojia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Tarun Kannoujia</h3>
@@ -730,10 +690,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/Rishabh Hanselia.svg"
-                      alt="card image"
-                    />
+                    <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Rishabh Hanselia</h3>
@@ -793,10 +750,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit sharma.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit sharma.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Sharma</h3>
@@ -815,10 +769,7 @@
                 </div>
                 <div class="team-card">
                   <div class="card-img">
-                    <img
-                      src="/assets/harshit pandey.jpeg"
-                      alt="card image"
-                    />
+                    <img src="/assets/harshit pandey.jpeg" alt="card image" />
                   </div>
                   <div class="card-content">
                     <h3>Harshit Pandey</h3>
@@ -882,10 +833,7 @@
           <div class="side-div-mid">
             <h2>Register for recruitment from IIIT Bhagalpur</h2>
             <div class="register-btn">
-              <a
-                href="/jaf"
-                >Register now</a
-              >
+              <a href="/jaf">Register now</a>
             </div>
           </div>
           <div class="side-div-down">
