--- a/views/visitors.ejs
+++ b/views/visitors.ejs
@@ -19,25 +19,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Training & Placement Cell | IIIT Bhagalpur</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/page-css\visitors.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <meta
       name="keywords"
       content="IIITBH, TnP IIITBH, Training and Placement Cell IIITBH, Indian Institute of Information Technology, Bhagalpur"
     />
-    <meta
-      name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
-    />
+    <meta name="description" content="Details for Visitors of the site." />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
       name="copyright"
@@ -75,10 +65,7 @@
       name="og:site_name"
       content="Training and Placement Cell, IIIT Bhagalpur"
     />
-    <meta
-      name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
-    />
+    <meta name="og:description" content="Details for Visitors of the site." />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
     <meta name="og:locality" content="Sabour" />
@@ -238,10 +225,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img
-                    src="/assets/techolution.svg"
-                    alt="Techolution"
-                  />
+                  <img src="/assets/techolution.svg" alt="Techolution" />
                 </div>
               </div>
               <div class="grid-item">
@@ -291,10 +275,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img
-                    src="/assets/ni.svg"
-                    alt="National Instruments"
-                  />
+                  <img src="/assets/ni.svg" alt="National Instruments" />
                 </div>
               </div>
               <div class="grid-item">
@@ -314,10 +295,7 @@
                   </div>
                 </div>
                 <div class="grid-item-img">
-                  <img
-                    src="/assets/mac_software.svg"
-                    alt="Mac Software"
-                  />
+                  <img src="/assets/mac_software.svg" alt="Mac Software" />
                 </div>
               </div>
             </div>
