--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Login page for Coordinators and Trainingand Placement Cell Officials."
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Login page for Coordinators and Trainingand Placement Cell Officials."
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -73,12 +73,10 @@
     <meta name="og:region" content="Bhagalpur" />
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
-
+    <title>Admin Login</title>
     <link href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css\page-css\login-page.css" />
-
-    
 
     <script defer type="text/javascript" src="/js/admin-login.js"></script>
   </head>
