--- a/views/contact-page.ejs
+++ b/views/contact-page.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Contact Details of Training and Placement Cell Coordinators and Officials of Indian Institute of Information Technology Bhagalpur"
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Contact Details of Training and Placement Cell Coordinators and Officials of Indian Institute of Information Technology Bhagalpur"
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -75,17 +75,10 @@
     <meta name="og:country-name" content="INDIA" />
 
     <title>Contact | Training & Placement Cell</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
     <link rel="stylesheet" href="/css\main.css" />
     <link rel="stylesheet" href="/css\page-css\contact-page.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <script defer type="text/javascript" src="/js/main.js"></script>
   </head>
 
@@ -155,10 +148,7 @@
               </div>
               <div class="contact-card">
                 <div class="card-img">
-                  <img
-                    src="/assets\Sangeeta_sharma.jpg"
-                    alt="card image"
-                  />
+                  <img src="/assets\Sangeeta_sharma.jpg" alt="card image" />
                 </div>
                 <div class="card-content">
                   <h3>Sangeeta Sharma</h3>
@@ -210,10 +200,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/Rishabh Agrawal.svg"
-                  alt="card image"
-                />
+                <img src="/assets/Rishabh Agrawal.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Rishabh Agrawal</h3>
@@ -276,10 +263,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/Tarun Kannaojia.svg"
-                  alt="card image"
-                />
+                <img src="/assets/Tarun Kannaojia.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Tarun Kannoujia</h3>
@@ -301,10 +285,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/Isha Chaudhary.svg"
-                  alt="card image"
-                />
+                <img src="/assets/Isha Chaudhary.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Isha Chaudhary</h3>
@@ -326,10 +307,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/Divya Bhattacharya.svg"
-                  alt="card image"
-                />
+                <img src="/assets/Divya Bhattacharya.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Dibya Bhattacharya</h3>
@@ -351,10 +329,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/Rishabh Hanselia.svg"
-                  alt="card image"
-                />
+                <img src="/assets/Rishabh Hanselia.svg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Rishabh Hanselia</h3>
@@ -454,10 +429,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/harshit sharma.jpeg"
-                  alt="card image"
-                />
+                <img src="/assets/harshit sharma.jpeg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Harshit Sharma</h3>
@@ -476,10 +448,7 @@
             </div>
             <div class="team-card">
               <div class="card-img">
-                <img
-                  src="/assets/harshit pandey.jpeg"
-                  alt="card image"
-                />
+                <img src="/assets/harshit pandey.jpeg" alt="card image" />
               </div>
               <div class="card-content">
                 <h3>Harshit Pandey</h3>
