--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Frequently Asked Questions related to Training and Placement Activities"
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Frequently Asked Questions related to Training and Placement Activities"
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -74,16 +74,9 @@
     <meta name="og:postal-code" content="813210" />
     <meta name="og:country-name" content="INDIA" />
     <title>FAQ | Training & Placement Cell</title>
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
     <link rel="stylesheet" href="/css\page-css\faq.css" />
 
     <script src="/js/faq.js"></script>
