--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -24,7 +24,7 @@
     />
     <meta
       name="description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Gallery Page. Photos related to events in the Institute"
     />
     <meta name="subject" content="Training and Placement Cell, IIITBH" />
     <meta
@@ -65,7 +65,7 @@
     />
     <meta
       name="og:description"
-      content="The training and placement cell is responsible for all the placement activities of all the departments of the institute. The placement activity of the institute is conducted at IIIT Bhagalpur Campus."
+      content="Gallery Page. Photos related to events in the Institute"
     />
 
     <meta name="og:email" content="tpo@iiitbh.ac.in" />
@@ -75,17 +75,10 @@
     <meta name="og:country-name" content="INDIA" />
     <title>Placement Gallery | IIIT Bhagalpur</title>
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/assets/fevicon.svg"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/fevicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/page-css/gallery.css" />
-    <link
-      rel="stylesheet"
-      href="/fontawesome-free-6.1.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css" />
   </head>
 
   <body>
